# Lead

./: .env  README.md  pyproject.toml
deep_research/: dockerfile  notes.txt
deep_research/.langgraph_api/: .langgraph_checkpoint.1.pckl
deep_research/open_deep_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deep_research/src/: README.md
deep_research/src/open_deep_research/: configuration.py  deep_researcher.py  main.py  prompts.py  state.py  utils.py
